// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateLabel horizontal 1`] = `
<ComposedLabel
  horizontal={true}
  placeholder="Não informada"
  title="label"
>
  10/10/1990
</ComposedLabel>
`;

exports[`DateLabel horizontal e small 1`] = `
<ComposedLabel
  horizontal={true}
  placeholder="Não informada"
  size="small"
  title="label"
>
  10/10/1990
</ComposedLabel>
`;

exports[`DateLabel render 1`] = `
<ComposedLabel
  placeholder="Não informada"
  title="label"
>
  10/10/1990
</ComposedLabel>
`;

exports[`DateLabel size small 1`] = `
<ComposedLabel
  placeholder="Não informada"
  size="small"
  title="label"
>
  10/10/1990
</ComposedLabel>
`;
